src/styles/Layout.module.css
.container {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    margin: 2rem 0;
    padding: 1rem;
    background-color: var(--bg-color);
    height: 100%;
    border-radius: 3rem;
    border-color: var(--primary);
    border-style: solid;
    border-width: 0.25rem 0.75rem 0.75rem 0.25rem;
    max-width: min(600px, 80vw);
    width: min(600px, 80vw);
    gap: 2rem;
    box-shadow: 45px 53px 59px 6px rgba(0, 0, 0, 0.87);
    -webkit-box-shadow: 45px 53px 59px 6px rgba(0, 0, 0, 0.87);
    -moz-box-shadow: 45px 53px 59px 6px rgba(0, 0, 0, 0.87);
}

.header {
    display: flex;
    justify-content: center;
    align-items: center;
    position: relative;
    width: 100%;
    height: 4.5em;
}

.header > h1 {
    font-size: clamp(2rem, 8vw - 1.5rem, 3.5rem);
}

.headerSide {
    position: absolute;
    top: 0.25rem;
}

.headerSide.left {
    left: 0.25rem;
    direction: ltr;
}
.headerSide.right {
    right: 0.25rem;
    direction: rtl;
}

.headerSide > a {
    display: block;
}

.main {
    padding: 0 1rem;
    flex: 1 1;
    width: 100%;
}

